# FTC

./: Serwis aukcyjny.md  Test Results - Test_api.html
baginski/: Cargo.toml  Rocket.toml  auctions_db  wnioski
baginski/migrations/2019-01-02-230228_initialize/: up.sql
baginski/src/: db_queries.rs  db_structs.rs  endpoints.rs  schema.rs
dokumentacja/: __latexindent_temp.tex  doc.aux  doc.bcf  doc.fdb_latexmk  doc.fls  doc.tex  doc.tex.bak  doc.toc  wstep.txt
rocket/: .env  Cargo.toml  auctions_db  wnioski
rocket/migrations/2019-01-02-230228_initialize/: down.sql  up.sql
rocket/src/: db_queries.rs  db_structs.rs  endpoints.rs  main.rs  schema.rs  session.rs
tests/: test_api.py
walasz/ftc2/: db.json  db.sqlite3  manage.py  requirements.txt
walasz/ftc2/ftc2/: settings.py  urls.py  wsgi.py
walasz/ftc2/ftc_store/: apps.py
walasz/ftc2/offers/: models.py  serializers.py  urls.py  views.py
walasz/ftc2/offers/migrations/: 0001_initial.py  0002_auctionoffer_customer_id.py  0003_offer_owner.py  0004_auto_20190109_2209.py  0005_auto_20190109_2215.py
walasz/ftc2/tests/: test_api.py
walasz/ftc2/users/: models.py  serializers.py  views.py
walasz/ftc2/users/migrations/: 0001_initial.py
