[package]
name = "rocket"
version = "0.1.0"
authors = ["sbaginsk <szymon.baginski@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde_derive = "1.0"
serde = "1.0"
diesel = "1.3.3"
validator = "0.8"

[dependencies.rocket_contrib]
version = "0.4.0"
# default-features = false
features = ["diesel_sqlite_pool"]